# nextjs-fastapi-postgres-starter

./: README.md
backend/: main.py  pyproject.toml
backend/app/: db_engine.py  models.py  openai_client.py  seed.py
backend/app/routers/: chat.py  user.py
frontend/app/: page.tsx
